# PPRL

./: .gitmodules  CMakeLists.txt  README.md
apps/record_linkage/: dataset1.csv  dataset2.csv  main_record_linkage.cpp  record_linkage.h  repeated_running.sh
booleancore/: core.h
core/: Party.h  core.h  rkn.h
exp_runners/rkn_experiments/: pprkn_synthetic_test.sh  script_ids  synthetic_data_experiments.sh
utils/: AesCtrRbg.h  auc_utils.h  connection.h  constant.h  flib.h  test_functions.h
